Update title and content for Azure welcome page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jana Nayagan | Official Trailer</title>
+    <title>WELCOME TO AZURE</title>
     <style>
         /* Professional Cinematic Theme */
         body, html {
@@ -59,17 +59,17 @@
 </head>
 <body>
 
-    <h1>Jana Nayagan</h1>
+    <h1>WELCOME TO AZURE</h1>
 
     <div class="video-container">
         <iframe 
-            src="https://www.youtube.com/watch?v=HAxm8n9QY50" 
+            src="https://www.youtube.com/watch?v=yVl_G-F7m8c" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
         </iframe>
     </div>
 
-    <p class="footer">OFFICIAL TRAILER | 2024</p>
+    <p class="footer">Python Course | 2024</p>
 
 </body>
 </html>
