Update YouTube video source in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="video-container">
         <iframe 
-            src="https://www.youtube.com/watch?v=yVl_G-F7m8c" 
+            src="https://www.youtube.com/watch?v=NpmFbWO6HPU" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
         </iframe>
